[package]
name = "dartbot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Marsh"]
description = "Dartbot API written in Rust and compiled to WASM"
license = "MIT/Apache-2.0"
repository = "https://github.com/enderer/dartbot-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 's'

